hphp/hack/test/typecheck/interface_memoize.php.exp
File "interface_memoize.php", line 4, characters 3-29:
Memoize is not allowed on interface methods (Parsing[1002])
