hphp/hack/test/typecheck/interface_memoize.php
<?hh
interface I {
  <<__Memoize>>
  public function foo(): void;

}
